src/objects/User_Branch__c.object
<CustomObject>
    <description>Usuario Oficina</description>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Usuario</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users_Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>branch_category_type__c</fullName>
        <formula>branch_name__r.branch_category_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_id__c</fullName>
        <formula>branch_name__r.branch_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_name__c</fullName>
        <description>Oficina</description>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Branch users</relationshipLabel>
        <relationshipName>Branches_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Principal</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<description>Identificador Único</description>
        <externalId>true</externalId>
        <label>Unique identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <formula>User__r.user_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_prof_position_type__c</fullName>
        <formula>User__r.prof_position_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_level4__c</fullName>
        <formula>branch_name__r.branch_level4_desc__r.branch_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch hierarchy level 4</label>
        <type>Text</type>
    </fields>
    <label>Oficina de Usuario</label>
    <listViews>
        <fullName>All</fullName>
        <columns>branch_name__c</columns>
        <columns>branch_id__c</columns>
        <columns>branch_category_type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UO-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oficinas de Usuario</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>